--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -10,11 +10,7 @@ jobs:
   lock:
     runs-on: ubuntu-latest
     steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@14dc64f30986eaa2ad2dddcec073f5aab18e5a24
-        with:
-          egress-policy: audit
-      - uses: dessant/lock-threads@e460dfeb36e731f3aeb214be6b0c9a9d9a67eda6
+      - uses: dessant/lock-threads@e460dfeb36e731f3aeb214be6b0c9a9d9a67eda6 # renovate: tag=v3.0.0
         with:
           github-token: ${{ github.token }}
           issue-lock-inactive-days: 30
