feat: add bug and feature templates
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -2,7 +2,7 @@ name: Feature Request
 description: Request a new feature and/or enhancement to an existing feature
 labels: [enhancement, triage]
 assignees:
-  - caarlos0
+  - dirien
 body:
   - type: markdown
     attributes:
