--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,8 +3,11 @@
     "config:base",
     ":semanticCommits",
     ":semanticCommitTypeAll(chore)",
-    ":gitSignOff"
+    ":gitSignOff",
+    "group:all",
+    "schedule:nonOfficeHours"
   ],
+  "timezone": "Europe/Berlin",
   "postUpdateOptions": [
     "gomodTidy",
     "gomodUpdateImportPaths"
@@ -20,12 +23,12 @@
         "patch",
         "pin",
         "digest"
-      ]
+      ],
+      "automerge": true,
+      "automergeStrategy": "squash",
+      "automergeType": "pr"
     }
   ],
   "assigneesFromCodeOwners": true,
   "assignAutomerge": true,
-  "automerge": true,
-  "automergeStrategy": "squash",
-  "automergeType": "pr"
 }
