--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -97,7 +97,7 @@ docker_signs:
   - cmd: cosign
     env:
       - COSIGN_EXPERIMENTAL=1
-    artifacts: images
+    artifacts: manifests
     output: true
     args:
       - 'sign'
