--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,19 +16,12 @@
   "labels": [
     "dependencies"
   ],
-  "packageRules": [
-    {
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ],
-      "automerge": true,
-      "automergeStrategy": "squash",
-      "automergeType": "pr"
-    }
-  ],
+  "automerge": true,
+  "automergeStrategy": "squash",
+  "automergeType": "pr",
   "assigneesFromCodeOwners": true,
-  "assignAutomerge": true
+  "assignAutomerge": true,
+  "major": {
+    "enabled": false
+  }
 }
