--- a/config/papermc/server-hetzner.yaml
+++ b/config/papermc/server-hetzner.yaml
@@ -3,14 +3,12 @@ kind: MinecraftServer
 metadata:
   name: minecraft-server
 spec:
-  monitoring:
-    enabled: true
   server:
-    cloud: do
-    region: fra1
-    size: s-4vcpu-8gb
+    cloud: hetzner
+    region: nbg1
+    size: cpx31
     ssh:
-      port: 22
+      port: 2223
       keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
       fail2ban:
         bantime: 1000
@@ -46,7 +44,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7bDigitalOcean \u00A7rMinecraft --- \u00A76PaperMC \u00A7redition
+      motd=\u00A7cHetzner \u00A7rMinecraft --- \u00A76PaperMC \u00A7redition
       query.port=25565
       force-gamemode=false
       rate-limit=0
