feat: add egoscale to ignoreDeps in renovate
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -22,6 +22,7 @@
   "assigneesFromCodeOwners": true,
   "assignAutomerge": true,
   "major": {
-    "enabled": false
-  }
+    "enabled": true
+  },
+  "ignoreDeps": ["github.com/exoscale/egoscale"]
 }
