--- a/config/papermc/server-azure-arm.yaml
+++ b/config/papermc/server-azure-arm.yaml
@@ -1,20 +1,20 @@
 apiVersion: minectl.ediri.io/v1alpha1
 kind: MinecraftServer
 metadata:
-  name: minecraft-server
+  name: minecraft-server-arm
 spec:
   server:
     cloud: azure
     region: westeurope
-    size: Standard_D2_v4
+    size: Standard_D2ps_v5
     ssh:
-      port: 22
+      port: 2223
       keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
       fail2ban:
         bantime: 1000
         maxretry: 3
     port: 25565
-    spot: true
+    arm: true
   minecraft:
     java:
       openjdk: 17
@@ -25,8 +25,8 @@ spec:
         port: 25575
         enabled: true
         broadcast: true
-    edition: java
-    version: 1.18.2
+    edition: papermc
+    version: 1.18.2-323
     eula: true
     properties: |
       level-seed=stackitminecraftrocks
@@ -45,7 +45,8 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7bAzure \u00A7rMinecraft --- \u00A76Java \u00A7redition
+      motd=\u00A7bAzure ARM \u00A7rMinecraft --- \u00A76PaperMC \u00A7redition
+      query.port=25565
       force-gamemode=false
       rate-limit=0
       hardcore=false
@@ -71,3 +72,4 @@ spec:
       enable-status=true
       allow-flight=false
       max-world-size=
+      
