feat: set mod_timestamp to ensure a build was reproducible
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,9 +17,10 @@ builds:
     goarch:
       - amd64
       - arm64
-    hooks:
-      post:
-        - upx "{{ .Path }}"
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    flags:
+      - -trimpath
+
 
 source:
   enabled: true
