--- a/config/java/server-fuga.yaml
+++ b/config/java/server-fuga.yaml
@@ -27,7 +27,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: 1.18.2
+    version: "1.19"
     eula: true
     properties: |
       level-seed=stackitminecraftrocks
