--- a/config/forge/server-civo.yaml
+++ b/config/forge/server-civo.yaml
@@ -4,9 +4,9 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: exoscale
-    region: de-fra-1
-    size: medium
+    cloud: civo
+    region: LON1
+    size: g3.large
     ssh:
       port: 22
       keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
@@ -24,8 +24,8 @@ spec:
         port: 25575
         enabled: true
         broadcast: true
-    edition: papermc
-    version: 1.19-29
+    edition: forge
+    version: 1.19-41.0.38
     eula: true
     properties: |
       level-seed=stackitminecraftrocks
@@ -44,8 +44,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7cExoscale \u00A7rMinecraft --- \u00A76Java \u00A7redition
-      query.port=25565
+      motd=\u00A7bCivo \u00A7rMinecraft --- \u00A76Forge \u00A7redition
       force-gamemode=false
       rate-limit=0
       hardcore=false
