fix: fix gamemode in server-civo.yaml
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/papermc/server-civo.yaml
+++ b/config/papermc/server-civo.yaml
@@ -35,7 +35,7 @@ spec:
       enable-jmx-monitoring=false
       server-ip=
       resource-pack-prompt=
-      gamemode=survival25565
+      gamemode=survival
       allow-nether=true
       enable-command-block=false
       sync-chunk-writes=true
