feat: change level-seed value
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/java/server-aws.yaml
+++ b/config/java/server-aws.yaml
@@ -30,7 +30,7 @@ spec:
     version: "1.19"
     eula: true
     properties: |
-      level-seed=stackitminecraftrocks
+      level-seed=minectlrocks
       view-distance=10
       enable-jmx-monitoring=false
       server-ip=
