--- a/config/forge/server-do.yaml
+++ b/config/forge/server-do.yaml
@@ -30,7 +30,7 @@ spec:
     version: 1.19-41.0.38
     eula: true
     properties: |
-      level-seed=stackitminecraftrocks
+      level-seed=minectlrocks
       view-distance=10
       enable-jmx-monitoring=false
       server-ip=
