--- a/config/java/server-fuga.yaml
+++ b/config/java/server-fuga.yaml
@@ -30,7 +30,7 @@ spec:
     version: "1.19"
     eula: true
     properties: |
-      level-seed=stackitminecraftrocks
+      level-seed=minectlrocks
       view-distance=10
       enable-jmx-monitoring=false
       server-ip=
