chore: update java version to 1.19.1
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/java/server-aws-arm.yaml
+++ b/config/java/server-aws-arm.yaml
@@ -28,7 +28,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: "1.19"
+    version: 1.19.1
     eula: true
     properties: |
       level-seed=minectlrocks
