chore: update purpur version to 1.19.1
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/purpur/server-aws-arm.yaml
+++ b/config/purpur/server-aws-arm.yaml
@@ -26,7 +26,7 @@ spec:
         enabled: true
         broadcast: true
     edition: purpur
-    version: "1.19"
+    version: 1.19.1
     eula: true
     properties: |
       level-seed=minectlrocks
