--- a/config/purpur/server-gce-arm.yaml
+++ b/config/purpur/server-gce-arm.yaml
@@ -26,7 +26,7 @@ spec:
         enabled: true
         broadcast: true
     edition: purpur
-    version: "1.19"
+    version: 1.19.1
     eula: true
     properties: |
       level-seed=minectlrocks
