--- a/config/spigot/server-do.yaml
+++ b/config/spigot/server-do.yaml
@@ -26,7 +26,7 @@ spec:
         enabled: true
         broadcast: true
     edition: spigot
-    version: "1.19"
+    version: 1.19.1
     eula: true
     properties: |
       level-seed=minectlrocks
