--- a/config/java/server-aws.yaml
+++ b/config/java/server-aws.yaml
@@ -27,49 +27,61 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: 1.19.1
+    version: 1.19.2
     eula: true
     properties: |
-      level-seed=minectlrocks
-      view-distance=10
-      enable-jmx-monitoring=false
-      server-ip=
-      resource-pack-prompt=
-      gamemode=survival
-      allow-nether=true
-      enable-command-block=false
-      sync-chunk-writes=true
-      enable-query=false
-      op-permission-level=4
-      prevent-proxy-connections=false
-      resource-pack=
-      entity-broadcast-range-percentage=100
-      level-name=world
-      player-idle-timeout=0
-      motd=\u00A76AWS \u00A7rMinecraft --- \u00A76Java \u00A7redition
-      query.port=25565
-      force-gamemode=false
-      rate-limit=0
-      hardcore=false
-      white-list=false
-      broadcast-console-to-ops=true
-      pvp=true
-      spawn-npcs=true
-      spawn-animals=true
-      snooper-enabled=true
-      difficulty=easy
-      function-permission-level=2
-      network-compression-threshold=256
-      text-filtering-config=
-      require-resource-pack=false
-      spawn-monsters=true
-      max-tick-time=60000
-      enforce-whitelist=false
-      use-native-transport=true
-      max-players=100
-      resource-pack-sha1=
-      spawn-protection=16
-      online-mode=true
-      enable-status=true
       allow-flight=false
+      allow-nether=true
+      broadcast-console-to-ops=true
+      broadcast-rcon-to-ops=true
+      difficulty=easy
+      enable-command-block=false
+      enable-jmx-monitoring=false
+      enable-query=false
+      enable-rcon=false
+      enable-status=true
+      enforce-secure-profile=true
+      enforce-whitelist=false
+      entity-broadcast-range-percentage=100
+      force-gamemode=false
+      function-permission-level=2
+      gamemode=survival
+      generate-structures=true
+      generator-settings={}
+      hardcore=false
+      hide-online-players=false
+      level-name=world
+      level-seed=minectlrocks
+      level-type=minecraft\:normal
+      max-chained-neighbor-updates=1000000
+      max-players=20
+      max-tick-time=60000
       max-world-size=29999984
+      motd=\u00A76AWS \u00A7rMinecraft --- \u00A76Java \u00A7redition
+      network-compression-threshold=256
+      online-mode=true
+      op-permission-level=4
+      player-idle-timeout=0
+      prevent-proxy-connections=false
+      previews-chat=false
+      pvp=true
+      query.port=25565
+      rate-limit=0
+      rcon.password=
+      rcon.port=25575
+      require-resource-pack=false
+      resource-pack=
+      resource-pack-prompt=
+      resource-pack-sha1=
+      server-ip=
+      server-port=25565
+      simulation-distance=10
+      spawn-animals=true
+      spawn-monsters=true
+      spawn-npcs=true
+      spawn-protection=16
+      sync-chunk-writes=true
+      text-filtering-config=
+      use-native-transport=true
+      view-distance=10
+      white-list=false
