--- a/config/fabric/server-linode.yaml
+++ b/config/fabric/server-linode.yaml
@@ -16,7 +16,7 @@ spec:
     port: 25565
   minecraft:
     java:
-      openjdk: 16
+      openjdk: 17
       xmx: 2G
       xms: 2G
       rcon:
@@ -25,7 +25,7 @@ spec:
         enabled: true
         broadcast: true
     edition: fabric
-    version: "1.19"
+    version: 1.19.2
     eula: true
     properties: |
       level-seed=minectlrocks
