--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -24,5 +24,11 @@
   "major": {
     "enabled": true
   },
+  "packageRules": [
+    {
+      "matchPackageNames": ["ghcr.io/distroless/static"],
+      "schedule": ["every 3 day of the week"]
+    }
+  ],
   "ignoreDeps": ["github.com/exoscale/egoscale"]
 }
