--- a/config/java/server-scaleway.yaml
+++ b/config/java/server-scaleway.yaml
@@ -3,6 +3,8 @@ kind: MinecraftServer
 metadata:
   name: minecraft-server
 spec:
+  monitoring:
+    enabled: true
   server:
     cloud: scaleway
     region: fr-par-1
