--- a/config/java/server-aws.yaml
+++ b/config/java/server-aws.yaml
@@ -11,7 +11,7 @@ spec:
     size: t3.xlarge
     ssh:
       port: 22
-      publickeyfile: "/root/.ssh/id_rsa.pub"
+      publickeyfile: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft.pub"
       fail2ban:
         bantime: 1000
         maxretry: 3
