--- a/config/java/server-azure-spot.yaml
+++ b/config/java/server-azure-spot.yaml
@@ -45,7 +45,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7bAzure \u00A7rMinecraft --- \u00A76Java \u00A7redition
+      motd=\u00A7bAzure Spot \u00A7rMinecraft --- \u00A76Java \u00A7redition
       force-gamemode=false
       rate-limit=0
       hardcore=false
