--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -41,9 +41,9 @@ signs:
     args:
       - sign-blob
       - '--output-certificate=${certificate}'
-      - '--output-signature=${signature}'
+      - '--bundle=${signature}'
       - '${artifact}'
-    artifacts: checksum
+    artifacts: all
     output: true
 
 dockers:
