--- a/config/papermc/server-akamai.yaml
+++ b/config/papermc/server-akamai.yaml
@@ -4,7 +4,7 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: linode
+    cloud: akamai
     region: eu-central
     size: g6-standard-4
     ssh:
@@ -24,8 +24,8 @@ spec:
         port: 25575
         enabled: true
         broadcast: true
-    edition: fabric
-    version: 1.19.3
+    edition: papermc
+    version: 1.19.3-365
     eula: true
     properties: |
       level-seed=minectlrocks
@@ -44,7 +44,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7aLinode \u00A7rMinecraft --- \u00A76Fabric \u00A7redition
+      motd=\u00A7aAkamai Connected Cloud \u00A7rMinecraft --- \u00A76PaperMC \u00A7redition
       query.port=25565
       force-gamemode=false
       rate-limit=0
