--- a/config/java/server-aws.yaml
+++ b/config/java/server-aws.yaml
@@ -27,7 +27,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: 1.19.3
+    version: "1.20"
     eula: true
     properties: |
       allow-flight=false
