feat: update to go 1.21
Signed-off-by: Engin Diri <engin.diri@ediri.de>

--- a/config/java/server-aws.yaml
+++ b/config/java/server-aws.yaml
@@ -27,7 +27,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: "1.20"
+    version: 1.20.2
     eula: true
     properties: |
       allow-flight=false
