--- a/config/java/server-aws-arm.yaml
+++ b/config/java/server-aws-arm.yaml
@@ -19,7 +19,7 @@ spec:
     arm: true
   minecraft:
     java:
-      openjdk: 17
+      openjdk: 21
       xmx: 2G
       xms: 2G
       rcon:
@@ -28,7 +28,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: 1.20.4
+    version: "1.21"
     eula: true
     properties: |
       level-seed=minectlrocks
