--- a/config/java/server-gce-arm.yaml
+++ b/config/java/server-gce-arm.yaml
@@ -17,7 +17,7 @@ spec:
     arm: true
   minecraft:
     java:
-      openjdk: 17
+      openjdk: 21
       xmx: 2G
       xms: 2G
       rcon:
@@ -26,7 +26,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: 1.20.4
+    version: "1.21"
     eula: true
     properties: |
       level-seed=minectlrocks
