--- a/config/java/server-scaleway.yaml
+++ b/config/java/server-scaleway.yaml
@@ -18,7 +18,7 @@ spec:
     port: 25565
   minecraft:
     java:
-      openjdk: 17
+      openjdk: 21
       xmx: 2G
       xms: 2G
       rcon:
@@ -27,7 +27,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: 1.20.4
+    version: "1.21"
     eula: true
     properties: |
       level-seed=minectlrocks
