--- a/config/multipass/server-java.yaml
+++ b/config/multipass/server-java.yaml
@@ -15,7 +15,7 @@ spec:
         maxretry: 3
   minecraft:
     java:
-      openjdk: 17
+      openjdk: 21
       xmx: 2G
       xms: 2G
       rcon:
@@ -24,7 +24,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
-    version: 1.20.1
+    version: "1.21"
     eula: true
     properties: |
       level-seed=minectlrocks
