--- a/config/spigot/server-akamai.yaml
+++ b/config/spigot/server-akamai.yaml
@@ -17,7 +17,7 @@ spec:
     port: 25565
   minecraft:
     java:
-      openjdk: 17
+      openjdk: 21
       xmx: 2G
       xms: 2G
       rcon:
@@ -26,7 +26,7 @@ spec:
         enabled: true
         broadcast: true
     edition: spigot
-    version: 1.20.4
+    version: "1.21"
     eula: true
     properties: |
       level-seed=minectlrocks
