--- a/config/spigot/server-azure.yaml
+++ b/config/spigot/server-azure.yaml
@@ -16,7 +16,7 @@ spec:
     port: 25565
   minecraft:
     java:
-      openjdk: 17
+      openjdk: 21
       xmx: 2G
       xms: 2G
       rcon:
@@ -25,7 +25,7 @@ spec:
         enabled: true
         broadcast: true
     edition: spigot
-    version: 1.20.4
+    version: "1.21"
     eula: true
     properties: |
       level-seed=minectlrocks
