chore(deps): update minectl-sdk to v0.20.0 and Minecraft to 1.21.11
- Update minectl-sdk from v0.19.0 to v0.20.0
- Update Go version to 1.24.0
- Update Minecraft Java Edition configs to 1.21.11
- Update PaperMC configs to 1.21.11-114
- Update Purpur configs to 1.21.11-2347
- Update Forge configs to 1.21.11-61.0.3
- Update Fabric, Spigot, CraftBukkit configs to 1.21.11
- Remove Equinix Metal and IONOS Cloud providers (breaking change in SDK)
- Remove related config files and documentation
- Update maintainer email in .goreleaser.yaml

BREAKING CHANGE: Equinix Metal and IONOS Cloud providers are no longer supported

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -114,7 +114,7 @@ brews:
 
     commit_author:
       name: dirien
-      email: engin.diri@mail.schwarz
+      email: info@ediri.de
 
     directory: Formula
     homepage: "https://github.com/dirien/minectl"
@@ -136,7 +136,7 @@ nfpms:
       {{- if .Arm }}v{{ .Arm }}{{ end -}}
     homepage: https://github.com/dirien/minectl
     description: "minectl️️ 🗺️ is a cli for creating Minecraft (java or bedrock) server on different cloud provider."
-    maintainer: "Engin Diri engin.diri@mail.schwarz"
+    maintainer: "Engin Diri info@ediri.de"
     license: "Apache License 2.0"
     vendor: minectl️️ Developers
     formats:
