--- a/config/purpur/server-oci.yaml
+++ b/config/purpur/server-oci.yaml
@@ -27,7 +27,7 @@ spec:
         enabled: true
         broadcast: true
     edition: purpur
-    version: 1.20.4
+    version: 1.21.11-2347
     eula: true
     properties: |
       level-seed=minectlrocks
